--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	background-size:100%;
 	}
 </style>
-<header><font color="#853232" size=6 face="Engravers MT">
+<header><font color="#c39797" size=6 face="Engravers MT">
 <h1><center>Sam y Yare</center></h1><font>
 </header>
 
