--- a/index.html
+++ b/index.html
@@ -3,15 +3,7 @@
 <title>&Iacutendice</title>
 </head>
 
-<style type="text/css">
-	body{
-	background-image:url("fondoy.jpeg");
-	background-repeat:no-repeat;
-	background-position:center;
-	background-attachment:fixed;
-	background-size:100%;
-	}
-</style>
+<body background="fondoy.jpeg">
 <header><font color="#c39797" size=6 face="Engravers MT">
 <h1><center>Sam y Yare</center></h1><font>
 </header>
